--- a/packages/pilot/public/locales/pt/translations.json
+++ b/packages/pilot/public/locales/pt/translations.json
@@ -612,12 +612,12 @@
         "trade_name": "Nome fantasia"
       },
       "create_account": {
-        "attraction": "Crie sua conta e aceite pagamentos online hoje!",
+        "attraction": "Crie sua conta e aceite pagamentos online hoje.",
         "confirm_password": "Confirmar a senha",
         "continue": "Continuar",
         "email": "E-mail",
         "password": "Senha",
-        "welcome": "Boas vindas ao Pagar.me!"
+        "welcome": "Boas-vindas ao Pagar.me!"
       },
       "different_passwords_error": "As senhas não conferem",
       "number_error": "Deve ser um número",
