recipients: refactor error step
Add custom messages and actions based on error code.

--- a/packages/pilot/public/locales/pt/translations.json
+++ b/packages/pilot/public/locales/pt/translations.json
@@ -452,11 +452,13 @@
       "effective_transfer_day": "Dia em que a transferência ocorrerá",
       "email": "E-mail",
       "exit": "Sair",
+      "expired_session": "Sua sessão expirou, faça login novamente.",
       "fail_create_recipient": "Falha na criação do Recebedor",
+      "fail_submit_data": "Falha ao enviar os dados",
       "field_between": "O número precisa ser entre {{start}} e {{end}}",
+      "field_invalid_cnpj": "O CNPJ digitado não é válido",
       "field_invalid_cpf": "O CPF digitado não é válido",
       "field_invalid_digit": "Dígito verificador inválido",
-      "field_invalid_cnpj": "O CNPJ digitado não é válido",
       "field_invalid_email": "O email digitado não é válido",
       "field_invalid_phone": "O telefone digitado não é válido",
       "field_max" : "Este campo só pode ter até {{number}} caracteres",
@@ -471,6 +473,7 @@
       "friday": "Sexta-feira",
       "identification": "Identificação",
       "legal_person": "Pessoa Jurídica",
+      "login_again": "Faça login novamente",
       "manual_volume": "Manual por Volume",
       "monday": "Segunda-feira",
       "monthly": "Mensal",
@@ -479,6 +482,7 @@
       "name": "Nome",
       "no_keep": "Não, quero manter",
       "no_partner": "Sem sócios",
+      "no_permission": "Sua empresa não tem permissões para realizar esta operação.",
       "optional_email": "E-Mail",
       "optional_phone": "Telefone (Opcional)",
       "optional_url": "URL do Site (Opcional)",
@@ -494,6 +498,7 @@
       "select_account": "Selecionar uma conta",
       "select_bank_account": "Selecione uma conta bancária",
       "select_or_add_account": "Selecione abaixo uma conta bancária ou adicione uma nova conta",
+      "server_error": "Ocorreu um erro no servidor, por favor tente mais tarde.",
       "thursday": "Quinta-feira",
       "title": "Adicionar Recebedor",
       "transfer_configuration": "Configurações de transferência",
